// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber :props :defaultValue, default value 6 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :disabled, function can not be call 1`] = `
<div class="t-input-number t-size-m t-is-disabled"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input disabled="disabled" autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-is-disabled t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :format, with 6% 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :max, value 6 < max 10 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :max, value 16 > max 10 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input t-is-error"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :min, value -1 < min 1 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input t-is-error"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase t-is-disabled"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :min, value 6 > min 1 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :mode, without class t-is-controls-right 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :mode:column, with class t-is-controls-right 1`] = `
<div class="t-input-number t-size-m t-is-controls-right"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-down t-size-m">
      <path fill-opacity=".9" fill-rule="evenodd" d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-chevron-up t-size-m">
      <path fill-opacity=".9" fill-rule="evenodd" d="M797.408 610.60864L738.5792 669.44 511.9936 442.85568 285.40928 669.44 226.57792 610.60864 511.9936 325.19296 797.408 610.60864Z" clip-rule="evenodd"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :mode:row, without class t-is-controls-right 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :size:large, with class t-size-l 1`] = `
<div class="t-input-number t-size-l"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-l">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-l">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :size:medium, with class t-size-m 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :size:small, with class t-size-s 1`] = `
<div class="t-input-number t-size-s"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-s">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-s">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :step, 2 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props :value, 6 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;

exports[`InputNumber :props class, with class t-input-number 1`] = `
<div class="t-input-number t-size-m"><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-remove t-size-m">
      <path fill-rule="evenodd" d="M224 470.39872H800V553.59872H224V470.39872Z" clip-rule="evenodd"></path>
    </svg></button>
  <div class="t-input"><input autocomplete="off" ref="refInputElem" placeholder="" class="t-input__inner t-input-number-text-align"></div><button type="button" class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-add t-size-m">
      <path d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"></path>
    </svg></button>
</div>
`;
